# paper2remarkable

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  Remarkable.alfredworkflow  arxiv2remarkable.py  config.example.yml  make_release.py  p2r.1  pyproject.toml  setup.py  test.py
.github/scripts/: test_p2r.sh
.github/workflows/: release.yml  test.yml
docs/: Makefile  conf.py  man.md  man.rst
paper2remarkable/: __init__.py  __main__.py  __version__.py  adjust.py  crop.py  exceptions.py  log.py  pdf_ops.py  remarkable.py  ui.py  utils.py
paper2remarkable/providers/: __init__.py  _base.py  _info.py  acl.py  acm.py  arxiv.py  citeseerx.py  cvf.py  diva.py  eccc.py  epub.py  euclid.py  html.py  iacr.py  jmlr.py  local.py  nature.py  nber.py  neurips.py  openreview.py  pdf_url.py  pmlr.py  pubmed.py  sagepub.py  science_direct.py  semantic_scholar.py  springer.py  tandfonline.py
tests/: _constants.py  test_arxiv.py  test_html.py  test_pdf_ops.py  test_providers.py  test_ui.py  test_utils.py
