[tool.poetry]
name = "arxiv2remarkable"
version = "0.1.0"
description = "Download an arXiv paper and send it to reMarkable"
authors = ["Gertjan van den Burg <gertjanvandenburg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
bs4 = "^0.0.1"
requests = "^2.21"
pdfplumber = "^0.5.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
